k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: tropia
  labels:
    name: tropia
